package dev.kaldiroglu.dp.creational.ch02.factoryMethod.solution.company.fm3;

import java.util.List;

public class Test {

	public static void main(String[] args) {
		System.out.println("*** Main in fm3 ***\n");

		HR hr = new HR(new EmployeeFactoryImpl(), new ManagerFactoryImpl(), new DirectorFactoryImpl());
		PayrollOffice po = new PayrollOffice();

		// Add more employees
		hr.addEmployee();
		hr.addEmployee();
		hr.addEmployee();
		hr.addManager();
		hr.addManager();
		hr.addDirector();

		hr.listEmployees();

		System.out.println();

		// Now pay time!
		List<Employee> employees = hr.getEmployees();

		for (Employee employee : employees)
			po.paySalary(employee);
	}
}
